<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_marginTop="5dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/max_day" />

    <TextView
        android:id="@+id/text_temperature_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_description_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nunc_ipsum_risus_porttitor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_weather_day"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/image_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_night" />

        <TextView
            android:id="@+id/text_temperature_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_description_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nunc_ipsum_risus_porttitor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image_weather_night"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/image_description" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>