<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pcs3614.howstheweather.Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_forecast_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/custom_light_blue"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/forecast_today"
                android:textAllCaps="true"
                android:textColor="@color/custom_plain_white"
                android:textSize="20sp" />

            <include
                android:id="@+id/include_cell_today"
                layout="@layout/cell_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/custom_medium_orange" />

            <TextView
                android:id="@+id/text_forecast_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/custom_light_blue"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:text="@string/forecast_next_days"
                android:textAllCaps="true"
                android:textColor="@color/custom_plain_white"
                android:textSize="20sp" />

            <include
                android:id="@+id/include_cell_tomorrow"
                layout="@layout/cell_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/custom_medium_orange" />

            <include
                android:id="@+id/include_cell_after_tomorrow"
                layout="@layout/cell_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/custom_medium_orange" />

            <TextView
                android:id="@+id/text_myWeather2.com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/powered_by" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
